Update to java 17